--- a/Gorilla-ScanSoftware/docker-compose.yml
+++ b/Gorilla-ScanSoftware/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3'
 services:
   nginx:
-    image: nginx-waf
+    image: nginx-gorilla-waf
     ports:
       - "80:80"
     depends_on:
       - flask
       - website
   flask:
-    image: flask-waf
+    image: flask-gorilla-waf
     ports:
       - "3333:3333"
     depends_on:
